--- a/App21.Skeleton/App.xaml
+++ b/App21.Skeleton/App.xaml
@@ -1,8 +1,20 @@
 ﻿<Application x:Class="App21.Skeleton.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <md3:BundledTheme BaseTheme="Inherit" PrimaryColor="Orange" SecondaryColor="Lime" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
 
+                <!-- Other merged dictionaries here -->
+                <!-- <ResourceDictionary Source="Styles/Other.xaml" /> -->
+            </ResourceDictionary.MergedDictionaries>
+
+            <Thickness x:Key="ControlPageContentMargin">24,20,24,20</Thickness>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
