--- a/App21.Skeleton/Views/MainWindow.xaml
+++ b/App21.Skeleton/Views/MainWindow.xaml
@@ -4,87 +4,142 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:App21.Skeleton.ViewModels"
+        xmlns:cv="clr-namespace:App21.Skeleton.Converter"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         Title="骨架屏" Height="450" Width="800">
     <Window.Resources>
-        <!-- 定义骨架屏幕的DataTemplate -->
-        <DataTemplate x:Key="SkeletonDataTemplate">
-            <Grid>
-                <!-- 灰色矩形代表正在加载的内容 -->
-                <Rectangle x:Name="BreathingLightRectangle" Fill="#EEEEEE">
-                    <!-- 添加加载动效 -->
-                    <Rectangle.Triggers>
-                        <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-                            <BeginStoryboard>
-                                <Storyboard RepeatBehavior="Forever">
-                                    <!-- 从#EEE渐变到#FFF -->
-                                    <ColorAnimation
-                                        Storyboard.TargetName="BreathingLightRectangle"
-                                        Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
-                                        To="#DDDDDD" Duration="0:0:1"
-                                        AutoReverse="True" />
-                                </Storyboard>
-                            </BeginStoryboard>
-                        </EventTrigger>
-                    </Rectangle.Triggers>
-                </Rectangle>
-            </Grid>
-        </DataTemplate>
-
-        <!-- 定义实际数据的DataTemplate -->
-        <DataTemplate x:Key="ActualDataTemplate">
-            <!-- 实际数据布局 -->
-            <Grid>
-                <ListBox>
-                    <ListBoxItem>美国</ListBoxItem>
-                    <ListBoxItem>美国2</ListBoxItem>
-                    <ListBoxItem>美国3</ListBoxItem>
-                    <ListBoxItem>美国4</ListBoxItem>
-                </ListBox>
-            </Grid>
-        </DataTemplate>
-
-        <Style TargetType="{x:Type ContentControl}">
-            <!-- 默认使用骨架屏幕模板 -->
-
-            <!-- 当数据加载完成时切换到实际数据模板 -->
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding DataIsLoaded}" Value="False">
-                    <Setter Property="ContentTemplate" Value="{StaticResource SkeletonDataTemplate}" />
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-
-        <Style TargetType="{x:Type ListBoxItem}">
-            <Setter Property="Height" Value="60" />
-            <Setter Property="Width" Value="300" />
-            <Setter Property="Margin" Value="0,2,0,2" />
-            <Setter Property="Background" Value="Transparent" />
-
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                        <ContentControl>
-                            <ContentPresenter />
-                        </ContentControl>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+        <cv:True2VisibleConverter x:Key="True2VisibleConverter" />
+        <cv:True2CollapsedConverter x:Key="True2CollapsedConverter" />
+        <cv:BrushOpacityConverter x:Key="BrushOpacityConverter" />
     </Window.Resources>
     <Grid>
-        <WrapPanel Background="Transparent">
-            <ListBox BorderThickness="0" Background="Transparent">
+        <Grid>
+            <ListBox ItemsSource="{Binding Channels}"
+                     Visibility="{Binding DataIsLoaded, Converter={StaticResource True2VisibleConverter}}">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListBoxItem}">
+                        <Setter Property="Height" Value="70" />
+                        <Setter Property="Width" Value="260" />
+                        <Setter Property="Margin" Value="0,2,0,2" />
+
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <StackPanel Orientation="Horizontal" Width="260" Background="LightGray">
+                                        <Border Width="40" Height="40" BorderThickness="1"
+                                                Background="{StaticResource MaterialDesignShadowBrush}"
+                                                HorizontalAlignment="Left"
+                                                CornerRadius="20"
+                                                Margin="8,0,8,0">
+                                            <Image VerticalAlignment="Center" HorizontalAlignment="Center"
+                                                   Source="{Binding TvgLogo}" />
+                                        </Border>
+
+                                        <StackPanel VerticalAlignment="Center">
+                                            <TextBlock Text="{Binding Name}"
+                                                       FontWeight="Bold"
+                                                       HorizontalAlignment="Left" />
+                                            <TextBlock Text="{Binding GroupTitle}"
+                                                       TextWrapping="Wrap"
+                                                       HorizontalAlignment="Left" />
+                                        </StackPanel>
+                                    </StackPanel>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
+            <ListBox
+                Visibility="{Binding DataIsLoaded, Converter={StaticResource True2CollapsedConverter}}">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                        <Setter Property="Height" Value="70" />
+                        <Setter Property="Width" Value="260" />
+                        <Setter Property="Margin" Value="0,2,0,2" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <StackPanel Orientation="Horizontal" Width="260"
+                                                Background="{Binding Foreground, ElementName=PartDot, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.16}"
+                                                HorizontalAlignment="Left">
+                                        <Grid>
+                                            <TextBlock x:Name="PartDot"> </TextBlock>
+                                            <Ellipse x:Name="BLR1" Height="50" Width="50" Fill="#FFF" Margin="5">
+                                                <!-- 添加加载动效 -->
+                                                <Ellipse.Triggers>
+                                                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                                                        <BeginStoryboard>
+                                                            <Storyboard RepeatBehavior="Forever">
+                                                                <!-- 从#EEE渐变到#FFF -->
+                                                                <ColorAnimation
+                                                                    Storyboard.TargetName="BLR1"
+                                                                    Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
+                                                                    To="#EEE" Duration="0:0:1"
+                                                                    AutoReverse="True" />
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </EventTrigger>
+                                                </Ellipse.Triggers>
+                                            </Ellipse>
+                                        </Grid>
+                                        <StackPanel VerticalAlignment="Center">
+                                            <Rectangle x:Name="BLR2" Height="20" Width="160" Fill="#FFF" Margin="5"
+                                                       RadiusX="5" RadiusY="5"
+                                                       HorizontalAlignment="Left">
+                                                <!-- 添加加载动效 -->
+                                                <Rectangle.Triggers>
+                                                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                                                        <BeginStoryboard>
+                                                            <Storyboard RepeatBehavior="Forever">
+                                                                <!-- 从#EEE渐变到#FFF -->
+                                                                <ColorAnimation
+                                                                    Storyboard.TargetName="BLR2"
+                                                                    Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
+                                                                    To="#EEE" Duration="0:0:1"
+                                                                    AutoReverse="True" />
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </EventTrigger>
+                                                </Rectangle.Triggers>
+                                            </Rectangle>
+                                            <Rectangle x:Name="BLR3" Height="12" Width="80" Fill="#FFF" Margin="5"
+                                                       RadiusX="5" RadiusY="5"
+                                                       HorizontalAlignment="Left">
+                                                <!-- 添加加载动效 -->
+                                                <Rectangle.Triggers>
+                                                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                                                        <BeginStoryboard>
+                                                            <Storyboard RepeatBehavior="Forever">
+                                                                <!-- 从#EEE渐变到#FFF -->
+                                                                <ColorAnimation
+                                                                    Storyboard.TargetName="BLR3"
+                                                                    Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
+                                                                    To="#EEE" Duration="0:0:1"
+                                                                    AutoReverse="True" />
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </EventTrigger>
+                                                </Rectangle.Triggers>
+                                            </Rectangle>
+                                        </StackPanel>
+                                    </StackPanel>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
                 <ListBoxItem>美国</ListBoxItem>
                 <ListBoxItem>美国2</ListBoxItem>
                 <ListBoxItem>美国3</ListBoxItem>
                 <ListBoxItem>美国4</ListBoxItem>
+                <ListBoxItem>美国5</ListBoxItem>
+                <ListBoxItem>美国6</ListBoxItem>
             </ListBox>
-        </WrapPanel>
+        </Grid>
 
-        <ToggleButton IsChecked="{Binding IsButtonChecked}"
-                      Width="60" Height="30"
+        <ToggleButton IsChecked="{Binding IsButtonChecked, Mode=TwoWay}"
                       VerticalAlignment="Bottom" HorizontalAlignment="Left" />
     </Grid>
 </Window>
