--- a/App21.Skeleton/Views/MainWindow.xaml
+++ b/App21.Skeleton/Views/MainWindow.xaml
@@ -7,136 +7,115 @@
         xmlns:cv="clr-namespace:App21.Skeleton.Converter"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
-        Title="骨架屏" Height="450" Width="800">
+        Style="{StaticResource MaterialDesignWindow}"
+        Background="{DynamicResource MaterialDesign.Brush.Background}"
+        Title="骨架屏" Height="750" Width="800">
     <Window.Resources>
         <cv:True2VisibleConverter x:Key="True2VisibleConverter" />
         <cv:True2CollapsedConverter x:Key="True2CollapsedConverter" />
         <cv:BrushOpacityConverter x:Key="BrushOpacityConverter" />
+
+        <!-- 定义骨架屏幕的DataTemplate -->
+        <DataTemplate x:Key="SkeletonDataTemplate">
+            <Grid>
+                <!-- 灰色矩形代表正在加载的内容 -->
+                <Rectangle x:Name="BreathingLightRectangle" Fill="#EEE">
+                    <!-- 添加加载动效 -->
+                    <Rectangle.Triggers>
+                        <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                            <BeginStoryboard>
+                                <Storyboard RepeatBehavior="Forever">
+                                    <!-- 从#EEE渐变到#FFF -->
+                                    <ColorAnimation
+                                        Storyboard.TargetName="BreathingLightRectangle"
+                                        Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
+                                        To="#DDD" Duration="0:0:1"
+                                        AutoReverse="True" />
+                                </Storyboard>
+                            </BeginStoryboard>
+                        </EventTrigger>
+                    </Rectangle.Triggers>
+                </Rectangle>
+            </Grid>
+        </DataTemplate>
+
+        <Style TargetType="{x:Type ContentControl}">
+            <!-- 默认使用骨架屏幕模板 -->
+
+            <!-- 当数据加载完成时切换到实际数据模板 -->
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding DataIsLoaded}" Value="False">
+                    <Setter Property="ContentTemplate" Value="{StaticResource SkeletonDataTemplate}" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
     <Grid>
-        <Grid>
-            <ListBox ItemsSource="{Binding Channels}"
-                     Visibility="{Binding DataIsLoaded, Converter={StaticResource True2VisibleConverter}}">
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="{x:Type ListBoxItem}">
-                        <Setter Property="Height" Value="70" />
-                        <Setter Property="Width" Value="260" />
-                        <Setter Property="Margin" Value="0,2,0,2" />
+        <Grid Height="400" VerticalAlignment="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" MaxWidth="600" />
+                <ColumnDefinition Width="600" />
+                <ColumnDefinition Width="*" MaxWidth="600" />
+            </Grid.ColumnDefinitions>
 
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                    <StackPanel Orientation="Horizontal" Width="260" Background="LightGray">
-                                        <Border Width="40" Height="40" BorderThickness="1"
-                                                Background="{StaticResource MaterialDesignShadowBrush}"
-                                                HorizontalAlignment="Left"
-                                                CornerRadius="20"
-                                                Margin="8,0,8,0">
-                                            <Image VerticalAlignment="Center" HorizontalAlignment="Center"
-                                                   Source="{Binding TvgLogo}" />
-                                        </Border>
+            <ContentControl Margin="5" Grid.Column="0">
+                <Border>
+                    <Grid>
+                        <Border CornerRadius="5">
+                            <Border.Background>
+                                <ImageBrush Stretch="UniformToFill"
+                                            ImageSource="https://gd-hbimg.huaban.com/3bb312d3dd4754036f6e0ad0b5ebce6246c7c4ca200a3-9zhcor" />
+                            </Border.Background>
+                        </Border>
+                    </Grid>
+                </Border>
+            </ContentControl>
+            <ContentControl Margin="5" Grid.Column="1">
+                <Border>
+                    <Grid>
+                        <Border CornerRadius="5">
+                            <Border.Background>
+                                <ImageBrush Stretch="UniformToFill"
+                                            ImageSource="https://gd-hbimg.huaban.com/0b3b8c2562d89917e744a04065b4b21c033df17b19b743-dyiM8G_fw658webp" />
+                            </Border.Background>
+                        </Border>
 
-                                        <StackPanel VerticalAlignment="Center">
-                                            <TextBlock Text="{Binding Name}"
-                                                       FontWeight="Bold"
-                                                       HorizontalAlignment="Left" />
-                                            <TextBlock Text="{Binding GroupTitle}"
-                                                       TextWrapping="Wrap"
-                                                       HorizontalAlignment="Left" />
-                                        </StackPanel>
-                                    </StackPanel>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-            </ListBox>
-            <ListBox
-                Visibility="{Binding DataIsLoaded, Converter={StaticResource True2CollapsedConverter}}">
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource {x:Type ListBoxItem}}">
-                        <Setter Property="Height" Value="70" />
-                        <Setter Property="Width" Value="260" />
-                        <Setter Property="Margin" Value="0,2,0,2" />
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                    <StackPanel Orientation="Horizontal" Width="260"
-                                                Background="{Binding Foreground, ElementName=PartDot, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.16}"
-                                                HorizontalAlignment="Left">
-                                        <Grid>
-                                            <TextBlock x:Name="PartDot"> </TextBlock>
-                                            <Ellipse x:Name="BLR1" Height="50" Width="50" Fill="#FFF" Margin="5">
-                                                <!-- 添加加载动效 -->
-                                                <Ellipse.Triggers>
-                                                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-                                                        <BeginStoryboard>
-                                                            <Storyboard RepeatBehavior="Forever">
-                                                                <!-- 从#EEE渐变到#FFF -->
-                                                                <ColorAnimation
-                                                                    Storyboard.TargetName="BLR1"
-                                                                    Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
-                                                                    To="#EEE" Duration="0:0:1"
-                                                                    AutoReverse="True" />
-                                                            </Storyboard>
-                                                        </BeginStoryboard>
-                                                    </EventTrigger>
-                                                </Ellipse.Triggers>
-                                            </Ellipse>
-                                        </Grid>
-                                        <StackPanel VerticalAlignment="Center">
-                                            <Rectangle x:Name="BLR2" Height="20" Width="160" Fill="#FFF" Margin="5"
-                                                       RadiusX="5" RadiusY="5"
-                                                       HorizontalAlignment="Left">
-                                                <!-- 添加加载动效 -->
-                                                <Rectangle.Triggers>
-                                                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-                                                        <BeginStoryboard>
-                                                            <Storyboard RepeatBehavior="Forever">
-                                                                <!-- 从#EEE渐变到#FFF -->
-                                                                <ColorAnimation
-                                                                    Storyboard.TargetName="BLR2"
-                                                                    Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
-                                                                    To="#EEE" Duration="0:0:1"
-                                                                    AutoReverse="True" />
-                                                            </Storyboard>
-                                                        </BeginStoryboard>
-                                                    </EventTrigger>
-                                                </Rectangle.Triggers>
-                                            </Rectangle>
-                                            <Rectangle x:Name="BLR3" Height="12" Width="80" Fill="#FFF" Margin="5"
-                                                       RadiusX="5" RadiusY="5"
-                                                       HorizontalAlignment="Left">
-                                                <!-- 添加加载动效 -->
-                                                <Rectangle.Triggers>
-                                                    <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-                                                        <BeginStoryboard>
-                                                            <Storyboard RepeatBehavior="Forever">
-                                                                <!-- 从#EEE渐变到#FFF -->
-                                                                <ColorAnimation
-                                                                    Storyboard.TargetName="BLR3"
-                                                                    Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"
-                                                                    To="#EEE" Duration="0:0:1"
-                                                                    AutoReverse="True" />
-                                                            </Storyboard>
-                                                        </BeginStoryboard>
-                                                    </EventTrigger>
-                                                </Rectangle.Triggers>
-                                            </Rectangle>
-                                        </StackPanel>
-                                    </StackPanel>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-                <ListBoxItem>美国</ListBoxItem>
-                <ListBoxItem>美国2</ListBoxItem>
-                <ListBoxItem>美国3</ListBoxItem>
-                <ListBoxItem>美国4</ListBoxItem>
-                <ListBoxItem>美国5</ListBoxItem>
-                <ListBoxItem>美国6</ListBoxItem>
-            </ListBox>
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Left" Margin="30,0,0,0">
+                            <StackPanel.Resources>
+                                <Style TargetType="{x:Type TextBlock}">
+                                    <Setter Property="Foreground" Value="White" />
+                                    <Setter Property="FontWeight" Value="Bold" />
+                                    <Setter Property="HorizontalAlignment" Value="Left" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                    <Setter Property="Width" Value="600" />
+                                    <Setter Property="Margin" Value="0,5,0,5" />
+                                </Style>
+                            </StackPanel.Resources>
+                            <ContentControl>
+                                <TextBlock Text="9.99$" FontSize="16" />
+                            </ContentControl>
+                            <ContentControl>
+                                <TextBlock Text="Live In-Game Events" FontSize="30" TextWrapping="Wrap" />
+                            </ContentControl>
+                            <ContentControl>
+                                <TextBlock Text="Light up the sky" FontSize="16" Opacity="0.7" />
+                            </ContentControl>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+            </ContentControl>
+            <ContentControl Margin="5" Grid.Column="2">
+                <Border>
+                    <Grid>
+                        <Border CornerRadius="5">
+                            <Border.Background>
+                                <ImageBrush Stretch="UniformToFill"
+                                            ImageSource="https://gd-hbimg.huaban.com/e046907e0e2f6dae57a9c08ae934a0bcd3ca552c1a1d17-b5BcWW_fw658webp" />
+                            </Border.Background>
+                        </Border>
+                    </Grid>
+                </Border>
+            </ContentControl>
         </Grid>
 
         <ToggleButton IsChecked="{Binding IsButtonChecked, Mode=TwoWay}"
