--- a/App22.Selected/App.xaml
+++ b/App22.Selected/App.xaml
@@ -11,6 +11,7 @@
                     Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
 
                 <!-- Other merged dictionaries here -->
+                <ResourceDictionary Source="Resources/Icons.xaml" />
                 <ResourceDictionary Source="Styles/Other.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
