--- a/App22.Selected/Styles/Other.xaml
+++ b/App22.Selected/Styles/Other.xaml
@@ -10,10 +10,12 @@
         <Setter Property="HorizontalContentAlignment"
                 Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
         <Setter Property="Padding" Value="5" />
-        <Setter Property="Height" Value="34" />
-        <Setter Property="Width" Value="34" />
+        <Setter Property="Height" Value="30" />
+        <Setter Property="Width" Value="32" />
+        <Setter Property="Margin" Value="0,0,2,0" />
         <Setter Property="FontWeight" Value="SemiBold" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
+        <!-- Add spacing -->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -106,11 +108,11 @@
                             <Border x:Name="MouseOverBorder"
                                     Background="{TemplateBinding Foreground, Converter={StaticResource BrushRoundConverter}}"
                                     Opacity="0"
-                                    CornerRadius="17" />
+                                    CornerRadius="15" />
                             <Border x:Name="SelectedBackgroundBorder"
                                     Background="{DynamicResource MaterialDesign.Brush.Primary.Light}"
                                     Opacity="0"
-                                    CornerRadius="17" />
+                                    CornerRadius="15" />
                             <m3:Ripple x:Name="Ripple"
                                        Padding="{TemplateBinding Padding}"
                                        HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
@@ -129,7 +131,7 @@
                                     BorderThickness="0"
                                     Opacity="0"
                                     Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ListBox}, Path=SelectionMode, Converter={StaticResource EqualityToVisibilityConverter}, ConverterParameter={x:Static SelectionMode.Extended}, Mode=OneWay}"
-                                    CornerRadius="17" />
+                                    CornerRadius="15" />
                             <Ellipse x:Name="GeometryEllipse"
                                      Fill="Transparent"
                                      Focusable="False"
@@ -149,6 +151,12 @@
         </Setter>
         <Setter Property="VerticalContentAlignment"
                 Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
+    </Style>
+
+    <Style x:Key="M3ChoiceChipPrimaryListBox"
+           TargetType="{x:Type ListBox}"
+           BasedOn="{StaticResource MaterialDesignChoiceChipListBox}">
+        <Setter Property="ItemContainerStyle" Value="{StaticResource Md3ToolToggleListBoxItem}" />
     </Style>
 
 </ResourceDictionary>
