--- a/App22.Selected/Views/MainWindow.xaml
+++ b/App22.Selected/Views/MainWindow.xaml
@@ -11,7 +11,6 @@
         Title="App22.Selected" Height="450" Width="400">
     <Window.Resources>
         <cv:StatusToStyleConverter x:Key="StatusToStyleConverter" />
-        <cv:IconKeyToGeometryConverter x:Key="IconKeyToGeometryConverter" />
 
         <!-- 锁定样式 -->
         <Style x:Key="LockedStyle" TargetType="Border">
@@ -62,16 +61,6 @@
                  VerticalAlignment="Center" HorizontalAlignment="Center"
                  Style="{StaticResource M3ChoiceChipPrimaryListBox}"
                  Margin="0,0,0,10"
-                 Grid.Row="1">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Path Data="{Binding IconKey, Converter={StaticResource IconKeyToGeometryConverter}}"
-                              Stretch="Fill" Margin="2"
-                              Fill="Black" />
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+                 Grid.Row="1" />
     </Grid>
 </Window>
