--- a/App22.Selected/Styles/Other.xaml
+++ b/App22.Selected/Styles/Other.xaml
@@ -1,7 +1,19 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:m3="http://materialdesigninxaml.net/winfx/xaml/themes">
+    xmlns:m3="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:md="clr-namespace:App22.Selected.Models"
+    xmlns:cv="clr-namespace:App22.Selected.Converters">
+
+    <cv:IconKeyToGeometryConverter x:Key="IconKeyToGeometryConverter" />
+
+    <DataTemplate x:Key="IconOnlyItemTemplate" DataType="{x:Type md:StatusItem}">
+        <Grid>
+            <Path Data="{Binding IconKey, Converter={StaticResource IconKeyToGeometryConverter}}"
+                  Stretch="Fill" Margin="2"
+                  Fill="{DynamicResource MaterialDesign.Brush.Primary.Foreground}" />
+        </Grid>
+    </DataTemplate>
 
     <Style x:Key="Md3ToolToggleListBoxItem" TargetType="{x:Type ListBoxItem}">
         <Setter Property="Background" Value="Transparent" />
@@ -15,7 +27,6 @@
         <Setter Property="Margin" Value="0,0,2,0" />
         <Setter Property="FontWeight" Value="SemiBold" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
-        <!-- Add spacing -->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -157,6 +168,7 @@
            TargetType="{x:Type ListBox}"
            BasedOn="{StaticResource MaterialDesignChoiceChipListBox}">
         <Setter Property="ItemContainerStyle" Value="{StaticResource Md3ToolToggleListBoxItem}" />
+        <Setter Property="ItemTemplate" Value="{StaticResource IconOnlyItemTemplate}" />
     </Style>
 
 </ResourceDictionary>
