--- a/App23.BottomSheet/Views/MainWindow.xaml
+++ b/App23.BottomSheet/Views/MainWindow.xaml
@@ -6,6 +6,23 @@
         mc:Ignorable="d"
         Style="{StaticResource MaterialDesignWindow}"
         Title="Bottom Sheets" Height="450" Width="800">
+    <Window.Resources>
+        <!-- Storyboard for showing overlay -->
+        <Storyboard x:Key="ShowOverlayStoryboard">
+            <DoubleAnimation
+                Storyboard.TargetName="Overlay"
+                Storyboard.TargetProperty="Opacity"
+                From="0" To="0.5" Duration="0:0:0.3" />
+        </Storyboard>
+
+        <!-- Storyboard for hiding overlay -->
+        <Storyboard x:Key="HideOverlayStoryboard">
+            <DoubleAnimation
+                Storyboard.TargetName="Overlay"
+                Storyboard.TargetProperty="Opacity"
+                From="0.5" To="0" Duration="0:0:0.3" />
+        </Storyboard>
+    </Window.Resources>
     <Grid>
         <!-- Main Content -->
         <Grid>
@@ -27,7 +44,7 @@
         </Grid>
 
         <!-- Bottom Sheet Panel -->
-        <Border x:Name="BottomSheet" Margin="2,0,2,2" CornerRadius="2"
+        <Border x:Name="BottomSheet" Margin="5" CornerRadius="2"
                 Background="{DynamicResource MaterialDesign.Brush.Card.Background}"
                 HorizontalAlignment="Stretch" VerticalAlignment="Bottom"
                 Height="200"
