--- a/App23.BottomSheet/Views/MainWindow.xaml
+++ b/App23.BottomSheet/Views/MainWindow.xaml
@@ -41,10 +41,11 @@
         <!-- Overlay for detecting outside clicks -->
         <Grid x:Name="Overlay" Background="Black" Opacity="0.5" Visibility="Collapsed"
               MouseDown="Overlay_MouseDown">
+            <!--Rectangle x:Name="MosaicRectangle" /-->
         </Grid>
 
         <!-- Bottom Sheet Panel -->
-        <Border x:Name="BottomSheet" Margin="5" CornerRadius="2"
+        <Border x:Name="BottomSheet" CornerRadius="20,20,0,0"
                 Background="{DynamicResource MaterialDesign.Brush.Card.Background}"
                 HorizontalAlignment="Stretch" VerticalAlignment="Bottom"
                 Height="200"
