监听系统主题变化

--- a/App23.BottomSheet/Views/MainWindow.xaml
+++ b/App23.BottomSheet/Views/MainWindow.xaml
@@ -42,7 +42,8 @@
         </Grid>
 
         <!-- Overlay for detecting outside clicks -->
-        <Grid x:Name="Overlay" Background="White" Opacity="0.5" Visibility="Collapsed"
+        <Grid x:Name="Overlay" Background="{DynamicResource MaterialDesign.Brush.Primary.Foreground}" Opacity="0.5"
+              Visibility="Collapsed"
               MouseDown="Overlay_MouseDown">
             <!--Rectangle x:Name="MosaicRectangle" /-->
         </Grid>
