把Item的Style独立出去

--- a/App22.Selected/App.xaml
+++ b/App22.Selected/App.xaml
@@ -13,6 +13,7 @@
                 <!-- Other merged dictionaries here -->
                 <ResourceDictionary Source="Resources/Icons.xaml" />
                 <ResourceDictionary Source="Styles/Other.xaml" />
+                <ResourceDictionary Source="Styles/ShiningItem.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
