增加延迟信息显示

--- a/App01.VLC/Views/MainWindow.xaml
+++ b/App01.VLC/Views/MainWindow.xaml
@@ -101,6 +101,9 @@
                                                     </Image.Source>
                                                 </Image>
                                             </Grid>
+
+                                            <TextBlock Text="{Binding Delay}"
+                                                       HorizontalAlignment="Left" VerticalAlignment="Bottom" />
                                         </Grid>
                                     </Border>
                                 </DataTemplate>
